--- a/assets/css/modules/tabela.css
+++ b/assets/css/modules/tabela.css
@@ -46,7 +46,7 @@
 }
 
 .opentt-standings-watermark.has-watermark .tabela-lige {
-  background-color: rgba(0, 8, 26, 0.68);
+  background-color: rgba(0, 8, 26, 0.52);
 }
 
 .tabela-lige thead {
